# Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.ui  README.md  Resource.qrc  main.cpp
Resource/: style.css
